--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,13 +1,66 @@
 <resources>
-    <string name="app_name">Telemetria_Esp8266</string>
+
+    <string name="app_name">Telemetría</string>
+    <string name="form">Formulario</string>
+    <string name="requiered_field">*Campo requerido</string>
+    <string name="email">Correo electrónico</string>
+    <string name="password">Contraseña</string>
+    <string name="rep_password">Repetir Contraseña</string>
+    <string name="save">Guardar</string>
+    <string name="pasword_error">Las contraseñas no son iguales</string>
+    <string name="email_error">debe digitar nombre y correo electronico</string>
+    <string name="name">Nombre</string>
+    <string name="phoneNumber">Número telefónico</string>
+    <string name="data_Error">Debe completar todos los datos</string>
+    <string name="info_registrarse">¿No tienes Cuenta? REGISTRARSE click Aqui.</string>
+    <string name="logout_menu">Cerrar Sesión</string>
+    <string name="loginTitle">Introduca sus datos de Usuario</string>
+    <string name="UserEmailHint">Email de Usuario</string>
+    <string name="UserPasswordHint">Contraseña</string>
+    <string name="login">Iniciar Sesion</string>
+    <string name="fail_user_password">Usuario y contraseña invalidos</string>
+    <string name="empty" />
+    <string name="password6digit">contraseña de minimo 6 digitos</string>
+    <string name="title_activity_main">MainActivity</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
-    <string name="nav_header_title">Android Studio</string>
-    <string name="nav_header_subtitle">android.studio@android.com</string>
+    <string name="nav_header_title">"Nombre de Usuario"</string>
+    <string name="nav_header_subtitle">"Email de Usuario"</string>
+
+    <string name="info_Equip">Informacion del Equipo</string>
+    <string name="contact">Contacto:</string>
+    <string name="phone_contact">Telefono de contacto:</string>
+    <string name="address">Direccion:</string>
+    <string name="add_Equip">Agrega Equipo</string>
+    <string name="id_equip">ID Equipo:</string>
+    <string name="input_NameAndLastname">Ingrese Nombre y Apellido del contacto principal</string>
+    <string name="input_cellNumber">Ingrese un Numero celular del contacto</string>
+    <string name="input_Address">Ingrese una direccion de instalación</string>
+    <string name="input_ID">Ingrese ID un Nombre que identifique al Equipo</string>
+    <string name="count_dispensation">Contador de bebidas:</string>
+    <string name="input_dispensation_counter">ingrese la cantidad de bebidas dispensadas a la fecha</string>
+    <string name="add_image">Agregar imagen</string>
+    <string name="description">Descripcion:</string>
+    <string name="input_description">Ingrese otros datos como contactos adicionales, horarios o detalles del contrato</string>
+    <string name="title_new_equip">Ingrese la informacion del Nuevo Equipo</string>
+    <string name="units_month">Bebidas en el mes</string>
+    <string name="units_day">Bebidas hoy</string>
+    <string name="equip">Equipo</string>
+    <string name="add_equip">Agregar Equipo</string>
+    <string name="phone">telefono</string>
+    <string name="units_last_month">unidades mes anterior</string>
+    <string name="units_last_day">unidades ayer</string>
+    <string name="total_units">total unidades</string>
+    <string name="units_today">unidades hoy</string>
+    <string name="total_units_dispensed">total unidades dispensadas</string>
+
+
+
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
-
     <string name="menu_home">Home</string>
     <string name="menu_gallery">Gallery</string>
     <string name="menu_slideshow">Slideshow</string>
+
+
 </resources>
