se guarda usuario y contraseña en shared preferences para recordar login

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -63,6 +63,7 @@
     <string name="aceptar">aceptar</string>
     <string name="Equipo_Eliminado">Equipo Eliminado</string>
     <string name="cancelar">cancelar</string>
+    <string name="recordar">"Recordar "</string>
 
 
 </resources>
