--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -69,6 +69,8 @@
     <string name="user_not_exist">No existe el usario</string>
     <string name="user_already_exists">El usuario ya existe</string>
     <string name="user_auth_firebase_ok">\" Usuario autenticado correctamente por firebase Auth\"</string>
+    <string name="equipment_added_successfully">Equipo agregado a Firebase correctamente</string>
+    <string name="equipment_not_added">ERROR Equipo NO agregado a Firebase</string>
 
 
 </resources>
