--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,7 +36,7 @@
     <string name="input_NameAndLastname">Ingrese Nombre y Apellido del contacto principal</string>
     <string name="input_cellNumber">Ingrese un Numero celular del contacto</string>
     <string name="input_Address">Ingrese una direccion de instalación</string>
-    <string name="input_ID">Ingrese ID un Nombre que identifique al Equipo</string>
+    <string name="input_ID">*CAMPO OBLIGATORIO: Ingrese ID un Nombre que identifique al Equipo</string>
     <string name="count_dispensation">Contador de bebidas:</string>
     <string name="input_dispensation_counter">ingrese la cantidad de bebidas dispensadas a la fecha</string>
     <string name="add_image">Agregar imagen</string>
@@ -79,6 +79,8 @@
     <string name="device_list">lista de equipos</string>
     <string name="add_device">Agregar Equipo</string>
     <string name="delete_device">Borrar Equipo</string>
+    <string name="search_image">Buscar imagen</string>
+    <string name="add_image_to_continue">Agregue o capture una imagen para continuar</string>
 
 
 </resources>
