--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -82,6 +82,8 @@
     <string name="search_image">Buscar imagen</string>
     <string name="add_image_to_continue">Agregue o capture una imagen para continuar</string>
     <string name="title_activity_maps">MapsActivity</string>
+    <string name="maps">Mapas</string>
+    <string name="list">lista</string>
 
 
 </resources>
