mostrando fragment dispensacionesLista en una vista aparte

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -84,6 +84,7 @@
     <string name="title_activity_maps">MapsActivity</string>
     <string name="maps">Mapas</string>
     <string name="list">lista</string>
+    <string name="mostar_lista_dispensaciones">Mostar lista</string>
 
 
 </resources>
